force-app/main/default/objects/Case_Snapshot__c/Case_Snapshot__c.object-meta.xml
<CustomObject>
    <description>FCR, Snapshot</description>
    <label>Case Snapshot FCR</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Snapshot FCR</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>