force-app/main/default/objects/Case_Snapshot__c/fields/Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Days__c</fullName>
    <label>Age (Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>