force-app/main/default/objects/Case_Snapshot__c/fields/Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_Hours__c</fullName>
    <label>Age (Hours)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>