force-app/main/default/objects/Case_Snapshot__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <label>Closed</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>