force-app/main/default/objects/Case_Snapshot__c/fields/FCR__c.field-meta.xml
<CustomField>
    <fullName>FCR__c</fullName>
    <label>FCR</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>