force-app/main/default/objects/Case_Snapshot__c/fields/First_Interaction__c.field-meta.xml
<CustomField>
    <fullName>First_Interaction__c</fullName>
    <label>First Interaction</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>