force-app/main/default/objects/Case_Snapshot__c/fields/Non_FCR__c.field-meta.xml
<CustomField>
    <fullName>Non_FCR__c</fullName>
    <formula>First_Interaction__c - FCR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non FCR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>