force-app/main/default/objects/Case_Snapshot__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>