force-app/main/default/objects/Case_Snapshot__c/fields/Owner_Case__c.field-meta.xml
<CustomField>
    <fullName>Owner_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Case</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Snapshot_FCR</relationshipName>
    <type>Lookup</type>
</CustomField>