force-app/main/default/objects/Case_Snapshot__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>IF (MONTH(Date__c) == 1, &quot;Januari &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 2, &quot;Februari &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 3, &quot;Maret &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 4, &quot;April &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 5, &quot;Mei &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 6, &quot;Juni &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 7, &quot;Juli &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 8, &quot;Agustus &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 9, &quot;September &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 10, &quot;Oktober &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 11, &quot;November &quot; &amp; TEXT(YEAR(Date__c)), 
IF (MONTH(Date__c) == 12, &quot;Desember &quot; &amp; TEXT(YEAR(Date__c)), 
NULL))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periode</label>
    <type>Text</type>
</CustomField>