force-app/main/default/objects/Case_Snapshot__c/fields/Repeat_Call__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Call__c</fullName>
    <label>Repeat Call</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>