force-app/main/default/objects/Case_Snapshot__c/fields/Total_Case__c.field-meta.xml
<CustomField>
    <fullName>Total_Case__c</fullName>
    <formula>Open__c + Closed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>